--- a/src/main/resources/templates/service.html
+++ b/src/main/resources/templates/service.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	
-	<footer class="hostTag" th:replace="footer::footer1(${title},$(subtitle})">
-		
+	<footer class="hostTag" th:insert="footer::footer1(${title},${subtitle})">
+		<h1>This is hosTag</h1>
 	</footer>
 	
 </body>
