--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -10,6 +10,7 @@
 		<h1>This is fragment tag</h1>
 		<h1 th:text="${title}"></h1>
 		<h2 th:text="${subtitle}"></h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto adipisci laboriosam beatae voluptatem ratione ipsam.</p>
 		
 	</footer>
 		
